--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>stp-circles</title>
+  <title>orbit</title>
   <link rel="stylesheet" href="app/main.css">
 </head>
 <body>
